about page and nav bar

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
 <main>
-
+    <div class="navbar">
+        <a href="/dashboard">My dashboard</a>
+        <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
+        <a href="/about">About</a>
+        <a href="/login">Login</a>
+    </div>
 </main>
