Added pictures and more parts to CSS styling

--- a/public/site.css
+++ b/public/site.css
@@ -78,3 +78,13 @@ label {
 	position: relative;
 }
 
+.container {
+    padding: 0 16px;
+}
+
+.container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
