--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -14,7 +14,7 @@
     <div class="row">
         <div>
             <div>
-                <img src="">
+                <img src="../public/images/nick_g.jpg">
                 <div class = "container">
                     <h2>Nick Guo</h2>
                     <p>Chief Engineer</p>
@@ -26,7 +26,7 @@
 
         <div>
             <div>
-                <img src="">
+                <img src="../public/images/jerry.jpg">
                 <div class = "container">
                     <h2>Jerry Yu</h2>
                     <p>CEO</p>
@@ -38,7 +38,7 @@
 
         <div>
             <div>
-                <img src="">
+                <img src="../public/images/nick_s.jpg">
                 <div class = "container">
                     <h2>Nicholas Szegheo</h2>
                     <p>COO and President</p>
@@ -50,7 +50,7 @@
 
         <div>
             <div>
-                <img src="">
+                <img src="../public/images/yakov.jpg">
                 <div class = "container">
                     <h2>Yakov Kazinets</h2>
                     <p>CEO</p>
