--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -1,6 +1,5 @@
 <main>
-
-    <form id="register-form" method="post" action="">
+    <form method="post" action="">
         <label for="username">Enter Username</label>
         <input id="username" type="text" name="username"/>
 
