--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -1,3 +1,15 @@
 <main>
+    <form method="post" action="">
+        <label for="url">Enter URL</label>
+        <input id="url" type="text" name="url"/>
 
+        <label for="description">Enter description</label>
+        <input id="description" type="text" name="description"/>
+
+        <label for="expdate">Enter expiration date</label>
+        <input id="expdate" type="text" name="expdate"/>
+
+        <button type="submit">Create Listing</button>
+
+    </form>
 </main>
