--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,6 +4,18 @@
         <label for="username">Set Username</label>
         <input id="username" type="text" name="username"/>
 
+        <label for="email">Enter Email</label>
+        <input id="email" type="text" name="email"/>
+
+        <label for="country">Enter country</label>
+        <input id="country" type="text" name="country"/>
+
+        <label for="age">Enter Age</label>
+        <input id="age" type="number" name="age"/>
+
+        <label for="bank">Enter Bank Routing Number</label>
+        <input id="bank" type="text" name="bank"/>
+
         <label for="password1">Set Password</label>
         <input id="password1" type="password" name="password1"/>
 
