--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <button type="submit">Register for account</button>
 
     </form>
-
+    <div id="error-container" hidden></div>
     <form id="register-form" method="post" action="" hidden>
         <label for="username">Set Username</label><br>
         <input id="username" type="text" name="username"/><br>
@@ -37,7 +37,5 @@
 
         <button type="submit">Register</button>
     </form>
-    {{#if error}}
-        <h3>{{error}}</h3>
-    {{/if}}
+    <div id="error-container2" hidden></div>
 </main>
