--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -12,8 +12,5 @@
         <button type="submit">Change Password</button>
 
     </form>
-
-    {{#if error}}
-        <h3>{{error}}</h3>
-    {{/if}}
+    <div id="passworderror" hidden></div>
 </main>
