--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,8 @@
         <a href="/dashboard">My dashboard</a>
         <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
         <a href="/about">About</a>
-        <a href="/login">Login</a>
+        <a href="/user/login">Login</a>
+        <a href="/user/logout">Logout</a>
     </div>
 
     {{#each NFT}}
