--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <main>
 
-    <form id="login-form" method="post" action="/login">
+    <form id="login-form" method="post" action="/user/login">
         <label for="username">Username</label><br>
         <input id="username" type="text" name="username"/><br>
 
@@ -13,7 +13,7 @@
 
     </form>
     <div id="error-container" hidden></div>
-    <form id="register-form" method="post" action="" hidden>
+    <form id="register-form" method="post" action="/user/register" hidden>
         <label for="username">Set Username</label><br>
         <input id="username" type="text" name="username"/><br>
 
