--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
 <main>
     <div class="navbar">
-        <a href="/dashboard">My dashboard</a>
+        <a href="/user/dashboard">My dashboard</a>
         <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
-        <a href="/about">About</a>
+        <a href="/user/about">About</a>
         <a href="/user/login">Login</a>
         <a href="/user/logout">Logout</a>
     </div>
