route listing and user

--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -1,5 +1,5 @@
 <main>
-    <form method="post" action="">
+    <form method="post" action="/listing">
         <label for="url">Enter URL</label>
         <input id="url" type="text" name="url"/>
 
