--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -1,5 +1,5 @@
 <main>
-    <form method="post" action="">
+    <form method="post" action="/user/changepw">
         <label for="username">Enter Username</label>
         <input id="username" type="text" name="username"/>
 
