--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -1,13 +1,14 @@
 <main>
+    <h1>Create a NFT to Sell</h1>
     <form method="post" action="/listing">
-        <label for="url">Enter URL</label>
-        <input id="url" type="text" name="url"/>
+        <label for="url">Enter URL</label><br>
+        <input id="url" type="text" name="url"/><br>
 
-        <label for="description">Enter description</label>
-        <input id="description" type="text" name="description"/>
+        <label for="description">Enter description</label><br>
+        <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
 
-        <label for="expdate">Enter expiration date</label>
-        <input id="expdate" type="text" name="expdate"/>
+        <label for="expdate">Enter expiration date</label><br>
+        <input id="expdate" type="text" name="expdate"/><br>
 
         <button type="submit">Create Listing</button>
 
