--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -12,51 +12,43 @@
     <h2>Meet the team</h2>
     
     <div class="row">
-        <div>
-            <div>
-                <img src="../public/images/nick_g.jpg">
-                <div class = "container">
-                    <h2>Nick Guo</h2>
-                    <p>Chief Engineer</p>
-                    <p>Blue is the colour of the clear sky and the deep sea</p>
-                    <p>nguo1@stevens.edu</p>
-                </div>
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="../public/images/nick_g.jpg" alt="Nick Guo">
+            <div class="card-body">
+                <h2 class="card-title">Nick Guo</h2>
+                <p>Chief Engineer</p>
+                <p>Blue is the colour of the clear sky and the deep sea</p>
+                <p>nguo1@stevens.edu</p>
             </div>
         </div>
 
-        <div>
-            <div>
-                <img src="../public/images/jerry.jpg">
-                <div class = "container">
-                    <h2>Jerry Yu</h2>
-                    <p>CEO</p>
-                    <p>Pump Dogecoin and Safemoon</p>
-                    <p>jyu28@stevens.edu</p>
-                </div>
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="../public/images/jerry.jpg" alt="Jerry Yu">
+            <div class="card-body">
+                <h2 class="card-title">Jerry Yu</h2>
+                <p>CEO</p>
+                <p>Pump Dogecoin and Safemoon</p>
+                <p>jyu28@stevens.edu</p>
             </div>
         </div>
 
-        <div>
-            <div>
-                <img src="../public/images/nick_s.jpg">
-                <div class = "container">
-                    <h2>Nicholas Szegheo</h2>
-                    <p>COO and President</p>
-                    <p>It’s Not a JPEG, It’s Totally Different. It’s Even Less</p>
-                    <p>nszegheo@stevens.edu</p>
-                </div>
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="../public/images/nick_s.jpg" alt="Nicholas Szegheo">
+            <div class="card-body">
+                <h2 class="card-title">Nicholas Szegheo</h2>
+                <p>COO and President</p>
+                <p>It’s Not a JPEG, It’s Totally Different. It’s Even Less</p>
+                <p>nszegheo@stevens.edu</p>
             </div>
         </div>
 
-        <div>
-            <div>
-                <img src="../public/images/yakov.jpg">
-                <div class = "container">
-                    <h2>Yakov Kazinets</h2>
-                    <p>CEO</p>
-                    <p>Apes strong together</p>
-                    <p>ykazinet@stevens.edu</p>
-                </div>
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="../public/images/yakov.jpg" alt="Yakov Kazinets">
+            <div class="card-body">
+                <h2 class="card-title">Yakov Kazinets</h2>
+                <p>CEO</p>
+                <p>Apes strong together</p>
+                <p>ykazinet@stevens.edu</p>
             </div>
         </div>
 
