--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,3 +1,14 @@
 <main>
-
+    <h1>My Listings</h1>
+    {{#each NFT}}
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src= {{NFT.image}} alt="NFT image">
+        <div class="card-body">
+            <h4 class="card-title"><b>{{NFT.expire}}</b></h4>
+            <p>{{NFT.desc}}</p>
+            <p>{{NFT.highestbid}}</p>
+            <button id="close">End Listing</button>
+        </div>
+    </div>
+    {{/each}}
 </main>
