bid and comment

--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -2,11 +2,11 @@
     <h1>My Listings</h1>
     {{#each NFT}}
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src= {{NFT.image}} alt="NFT image">
+        <img class="card-img-top" src= {{this.image}} alt="NFT image">
         <div class="card-body">
-            <h4 class="card-title"><b>{{NFT.expire}}</b></h4>
-            <p>{{NFT.desc}}</p>
-            <p>{{NFT.highestbid}}</p>
+            <h4 class="card-title"><b>{{this.expire}}</b></h4>
+            <p>{{this.desc}}</p>
+            <p>{{this.highestbid}}</p>
             <button id="close">End Listing</button>
         </div>
     </div>
