--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,12 +11,12 @@
 
     {{#each NFT}}
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src= {{NFT.image}} alt="NFT image">
+        <img class="card-img-top" src= {{this.image}} alt="NFT image">
         <div class="card-body">
-            <h4 class="card-title"><b>{{NFT.expire}}</b></h4>
-            <p>{{NFT.user}}</p>
-            <p>{{NFT.desc}}</p>
-            <p>{{NFT.highestbid}}</p>
+            <h4 class="card-title"><b>{{this.expire}}</b></h4>
+            <p>{{this.user}}</p>
+            <p>{{this.desc}}</p>
+            <p>{{this.highestbid}}</p>
         </div>
     </div>
     {{/each}}
