--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,10 +8,9 @@
         <input id="password" type="password" name="password"/><br>
 
         <button type="submit">Login</button>
-
-        <button type="submit">Register for account</button>
-
     </form>
+    
+    <button type="button">Register for account</button>
     <div id="error-container" hidden>
         {{#each error}}
         <p>{{this}}</p>
