--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,5 +1,6 @@
 <main>
     <h1>My Listings</h1>
+    {{#if NFT}}
     {{#each NFT}}
     <div class="card" style="width: 18rem;">
         <a href=""><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
@@ -11,4 +12,5 @@
         </div>
     </div>
     {{/each}}
+    {{/if}}
 </main>
