--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -7,7 +7,7 @@
         {{#each NFT}}
     
     <div class="card" style="width: 18rem;">
-        <a href=""><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
+        <a href={{this.url}}><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
         <div class="card-body">
             <h4 class="card-title"><b>{{this.expire}}</b></h4>
             <p>{{this.desc}}</p>
