--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -48,7 +48,7 @@
         <button type="button" id="loginb">Have an account? Log in here!</button>
     </form>
     {{#if haserror2}}
-    <div id="error-container2" hidden>
+    <div id="error-container2">
         {{#each errors}}
         <p>{{this}}</p>
         {{/each}}
