--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,5 @@
 <main>
-
-    <form id="login-form" method="post" action="/user/login" {{hidden1}}>
+    <form id="login-form" method="post" action="/user/login">
         <label for="username">Username</label><br>
         <input id="username" type="text" name="username"/><br>
 
@@ -9,14 +8,14 @@
 
         <button type="submit">Login</button>
         <button type="button" id = "regis">Register for account</button>
-    </form>
-    
-    {{#if haserror}}
-    <div id="error-container">
+        {{#if haserror}}
+        <div id="error-container">
         <p>Invalid username or password.</p>
-    </div>
-    {{/if}}
-    <form id="register-form" method="post" action="/user/register" {{hidden2}}>
+        </div>
+        {{/if}}
+    </form>
+
+    <form id="register-form" method="post" action="/user/register" hidden>
         <label for="username">Set Username</label><br>
         <input id="username" type="text" name="username"/><br>
 
@@ -44,14 +43,15 @@
         <label for="password2">Re-enter your Password</label><br>
         <input id="password2" type="password" name="password2"/><br>
 
-        <button type="submit">Register</button>
+        <button type="submit" id="reg">Register</button>
         <button type="button" id="loginb">Have an account? Log in here!</button>
-    </form>
-    {{#if haserror2}}
-    <div id="error-container2">
+        {{#if haserror2}}
+        <div id="error-container2">
         {{#each errors}}
         <p>{{this}}</p>
         {{/each}}
-    </div>
-    {{/if}}
+        </div>
+        {{/if}}
+    </form>
+
 </main>
