daddy whats good

--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -1,8 +1,8 @@
 <main>
     <div class="sidenav">
         <a href="/postnft">Create</a>
-        <a href="/listings">Listings</a>
-        <a href="/bids">Bids</a>
+        <a href="/listing">Listings</a>
+        <a href="/bid">Bids</a>
         <a href="/changepassword">Settings</a>
     </div>
 </main>
