Fixed routing for bids and listings to show data, changed /bid url to /bids

--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -2,7 +2,7 @@
     <div class="sidenav">
         <a href="/postnft">Create</a>
         <a href="/listing">Listings</a>
-        <a href="/bid">Bids</a>
+        <a href="/bids">Bids</a>
         <a href="/changepassword">Settings</a>
     </div>
 </main>
