Polished handlebars views, fixed NFT links in bids, added titles to routes

--- a/views/NFT.handlebars
+++ b/views/NFT.handlebars
@@ -1,14 +1,14 @@
 <main>
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src= {{NFT.image}} alt="NFT image">
+        <img class="card-img-top" src= {{NFT.URL}} alt="NFT image">
         <div class="card-body">
-            <h4 class="card-title"><b>{{NFT.expire}}</b></h4>
-            <p>{{NFT.desc}}</p>
-            <p>{{NFT.highestbid}}</p>
+            <h4 class="card-title"><b>Auction Ends: {{NFT.endDate}}</b></h4>
+            <p>{{NFT.description}}</p>
+            <p>Highest Bid: {{NFT.highestbid}}</p>
             <ul id = "comments">
             {{#each NFT.comments}}
             <li id={{this.s_id}}> <!--This is necessary for targeting specific elements based on id.--> 
-                {{this.comment}}
+                {{this.name}}: {{this.comment}}
             </li>
             {{/each}}
             </ul>
