--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -5,9 +5,9 @@
     <div class="card" style="width: 18rem;">
         <a href={{this.url}}><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
         <div class="card-body">
-            <h4 class="card-title"><b>{{this.expire}}</b></h4>
+            <h4 class="card-title"><b>Auction Ends: {{this.expire}}</b></h4>
             <p>{{this.desc}}</p>
-            <p>{{this.highestbid}}</p>
+            <p>Highest Bid: {{this.highestbid}}</p>
             <button id="close">End Listing</button>
         </div>
     </div>
