Added header to NFT listing page.

--- a/views/NFT.handlebars
+++ b/views/NFT.handlebars
@@ -1,4 +1,5 @@
 <main>
+    <h1>NFT Listing</h1>
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src= {{NFT.URL}} alt="NFT image">
         <div class="card-body">
