--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -1,4 +1,10 @@
 <main>
+    <div class="navbar">
+        <a href="/user/dashboard">My dashboard</a>
+        <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
+        <a href="/aboutus">About</a>
+        <a href="/user/logout">Logout</a>
+    </div>
     <div>
         <h1>About the website</h1>
         <p>This website is purely satire and to practice what we learned in our web development class.
@@ -11,7 +17,7 @@
 
     <h2>Meet the team</h2>
     
-    <div class="row">
+    <div class="row h-100">
         <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="../public/images/nick_g.jpg" alt="Nick Guo">
             <div class="card-body">
