--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
     <div class="navbar">
         <a href="/user/dashboard">My dashboard</a>
         <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
-        <a href="/user/about">About</a>
+        <a href="/aboutus">About</a>
         <a href="/user/logout">Logout</a>
     </div>
 
