--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -1,8 +1,18 @@
 <main>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
+            <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
+            <a class="nav-item nav-link active" href="/aboutus">About</a>
+            <a class="nav-item nav-link active" href="/user/logout">Logout</a>
+        </div>
+    </nav>
+
     <div class="sidenav">
         <a href="/postnft">Create</a>
         <a href="/listing">Listings</a>
         <a href="/bids">Bids</a>
         <a href="/changepassword">Settings</a>
     </div>
+    <p>This area is under construction. Extra features coming soon!</p>
 </main>
