--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -1,4 +1,12 @@
 <main>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
+            <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
+            <a class="nav-item nav-link active" href="/aboutus">About</a>
+            <a class="nav-item nav-link active" href="/user/logout">Logout</a>
+        </div>
+    </nav>
     <h1>My Bids</h1>
     {{#if message}}
         <div>{{message}}</div> 
