--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,12 @@
 <main>
-    <div class="navbar">
-        <a href="/user/dashboard">My dashboard</a>
-        <a href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
-        <a href="/aboutus">About</a>
-        <a href="/user/logout">Logout</a>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
+            <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
+            <a class="nav-item nav-link active" href="/aboutus">About</a>
+            <a class="nav-item nav-link active" href="/user/logout">Logout</a>
+        </div>
+    </nav>
 
     <h1>NFT Marketplace</h1>
     {{#if NFT}}
