--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -8,11 +8,13 @@
         </div>
     </nav>
 
-    <div class="sidenav">
-        <a href="/postnft">Create</a>
-        <a href="/listing">Listings</a>
-        <a href="/bids">Bids</a>
-        <a href="/changepassword">Settings</a>
-    </div>
+    <nav class="nav flex-sm-column">
+        <a class="nav-link active" href="/postnft">Create</a>
+        <a class="nav-link active" href="/listing">Listings</a>
+        <a class="nav-link active" href="/bids">Bids</a>
+        <a class="nav-link active" href="/changepassword">Settings</a>
+    </nav>
+
     <p>This area is under construction. Extra features coming soon!</p>
+    <img src="https://pyxis.nymag.com/v1/imgs/8f8/e12/51b54d13d65d8ee3773ce32da03e1fa220-dogecoin.rsquare.w1200.jpg" alt="Doge">
 </main>
