make the update password and create nft working

--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -7,6 +7,13 @@
             <a class="nav-item nav-link active" href="/user/logout">Logout</a>
         </div>
     </nav>
+    {{#if haserror}}
+    <div class="error">
+    {{#each errors}}
+    <p>{{this}}</p>
+    {{/each}}
+    </div>
+    {{/if}}
     <form method="post" action="/user/changepw">
         <label for="username">Enter Username</label>
         <input id="username" type="text" name="username"/>
