--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -9,10 +9,10 @@
     </nav>
 
     <nav class="nav flex-sm-column">
-        <a class="nav-link active" href="/NFT">Create</a>
+        <a class="nav-link active" href="/NFT">Create NFT</a>
         <a class="nav-link active" href="/listing">Listings</a>
         <a class="nav-link active" href="/bids">Bids</a>
-        <a class="nav-link active" href="/user/changepw">Settings</a>
+        <a class="nav-link active" href="/user/changepw">Change Password</a>
     </nav>
 
     <p>This area is under construction. Extra features coming soon!</p>
