--- a/public/site.css
+++ b/public/site.css
@@ -64,9 +64,11 @@ p {
 button {
     background-color: #222;
     color:white;
-    padding: 10px 10px;
+    padding: 7px 7px;
+	text-align: center;
     display: inline-block;
-    font-size: 2rem;
+    /*font-size: 100%;*/
+	border-radius: 10px;
 
 }
 
@@ -91,3 +93,4 @@ label {
 #error-container2 {
 	color: red;
 }
+
