--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -1,6 +1,7 @@
 <main>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/user">Homepage</a>
             <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
             <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
             <a class="nav-item nav-link active" href="/aboutus">About</a>
