--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -23,8 +23,8 @@
         <label for="description">Enter description</label><br>
         <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
 
-        <label for="expdate">Enter expiration date</label><br>
-        <input id="expdate" type="text" name="expdate"/><br>
+        <label for="datetime">Enter expiration date</label><br>
+        <input type="datetime-local" name="datetime" id="datetime"><br>
 
         <button type="submit">Create Listing</button>
 
