--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -15,13 +15,14 @@
     {{#if NFT}}
         {{#each NFT}}
     
-    <div class="card" style="width: 18rem;">
+    <div id={{this.id}} class="card" style="width: 18rem;">
         <a href={{this.url}}><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
         <div class="card-body">
             <h4 class="card-title"><b>Auction Ends: {{this.expire}}</b></h4>
             <p>{{this.desc}}</p>
             <p>Highest Bid: {{this.highestbid}}</p>
             <p>My Bid: {{this.mybid}}</p>
+            <button class="close-bid">Withdraw Bid</button>
         </div>
     </div>
     {{/each}}
