--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -11,13 +11,13 @@
     <h1>My Listings</h1>
     {{#if NFT}}
     {{#each NFT}}
-    <div class="card" style="width: 18rem;">
+    <div id={{this.id}} class="card" style="width: 18rem;">
         <a href={{this.url}}><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
         <div class="card-body">
             <h4 class="card-title"><b>Auction Ends: {{this.expire}}</b></h4>
             <p>{{this.desc}}</p>
             <p>Highest Bid: {{this.highestbid}}</p>
-            <button id="close">End Listing</button>
+            <button class="close-listing">End Listing</button>
         </div>
     </div>
     {{/each}}
