--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -24,7 +24,7 @@
         <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
 
         <label for="datetime">Enter expiration date</label><br>
-        <input type="datetime-local" name="datetime" id="datetime"><br>
+        <input type="date" name="datetime" id="datetime"><br>
 
         <button type="submit">Create Listing</button>
 
