--- a/views/NFT.handlebars
+++ b/views/NFT.handlebars
@@ -31,7 +31,8 @@
 
         <label for="comment">Enter Comment</label><br>
         <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
-
+        <input id = "listid" type="text" name="listid" value={{NFT._id}} hidden/>
+        <input id = "userid_bc" type="text" name="userid_bc" value={{userid}} hidden/>
         <button type="submit">Submit</button>
 
     </form>
