--- a/views/postNFT.handlebars
+++ b/views/postNFT.handlebars
@@ -18,10 +18,10 @@
     {{/if}}
     <form method="post" action="/listing">
         <label for="url">Enter URL</label><br>
-        <input id="url" type="text" name="url"/><br>
+        <input id="url" type="text" name="url" required/><br>
 
         <label for="description">Enter description</label><br>
-        <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
+        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br>
 
         <label for="datetime">Enter expiration date</label><br>
         <input type="date" name="datetime" id="datetime" required pattern="\d{4}-\d{2}-\d{2}"><br>
