Tweaked deletion script, made it easier on the eyes/less dialogue popups. Added empty text to homepage.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,6 +23,8 @@
             </div>
         </div>
         {{/each}}
+        {{else}}
+        <div>No current listings</div>
         {{/if}}
     </div>
 </main>
