--- a/public/site.css
+++ b/public/site.css
@@ -93,3 +93,32 @@ label {
 #error-container2 {
 	color: red;
 }
+
+.sidenav {
+	height: 100%;
+	width: 160px;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	padding-top: 20px;
+  }
+  
+.sidenav a {
+	padding: 6px 8px 6px 16px;
+	text-decoration: none;
+	font-size: 25px;
+	color: white;
+	display: block;
+}
+  
+.sidenav a:hover {
+	color: #f1f1f1;
+}
+
+#acc {
+	margin-left: 160px;
+  	padding: 0px 10px;
+}
