--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -1,4 +1,4 @@
-<main>
+<main id="acc">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/user">Homepage</a>
@@ -9,13 +9,13 @@
         </div>
     </nav>
 
-    <nav class="nav flex-sm-column">
+    <div class="sidenav">
         <a class="nav-link active" href="/NFT">Create NFT</a>
         <a class="nav-link active" href="/listing">Listings</a>
         <a class="nav-link active" href="/bids">Bids</a>
         <a class="nav-link active" href="/user/changepw">Change Password</a>
-    </nav>
+    </div>
 
     <p>This area is under construction. Extra features coming soon!</p>
-    <img src="https://pyxis.nymag.com/v1/imgs/8f8/e12/51b54d13d65d8ee3773ce32da03e1fa220-dogecoin.rsquare.w1200.jpg" alt="Doge">
+    <img src="https://pyxis.nymag.com/v1/imgs/8f8/e12/51b54d13d65d8ee3773ce32da03e1fa220-dogecoin.rsquare.w1200.jpg" alt="Doge" width="400" height="400">
 </main>
