--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -16,14 +16,14 @@
     </div>
     {{/if}}
     <form method="post" action="/user/changepw">
-        <label for="username">Enter Username</label>
-        <input id="username" type="text" name="username"/>
+        <label for="username">Enter Username</label><br>
+        <input id="username" type="text" name="username"/><br>
 
-        <label for="password1">Enter new Password</label>
-        <input id="password1" type="password" name="password1"/>
+        <label for="password1">Enter new Password</label><br>
+        <input id="password1" type="password" name="password1"/><br>
 
-        <label for="password2">Re-enter your new Password</label>
-        <input id="password2" type="password" name="password2"/>
+        <label for="password2">Re-enter your new Password</label><br>
+        <input id="password2" type="password" name="password2"/><br>
 
         <button type="submit">Change Password</button>
 
