--- a/views/accountdashboard.handlebars
+++ b/views/accountdashboard.handlebars
@@ -1,10 +1,10 @@
 <main id="acc">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/user">Homepage</a>
             <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
             <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
-            <a class="nav-item nav-link active" href="/aboutus">About</a>
+            <a class="nav-item nav-link active" href="/aboutus">About Us</a>
             <a class="nav-item nav-link active" href="/user/logout">Logout</a>
         </div>
     </nav>
