--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -1,10 +1,10 @@
 <main>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/user">Homepage</a>
             <a class="nav-item nav-link active" href="/user/dashboard">My dashboard</a>
             <a class="nav-item nav-link active" href="https://www.coindesk.com/price/bitcoin" target="_blank">Bitcoin Price</a>
-            <a class="nav-item nav-link active" href="/aboutus">About</a>
+            <a class="nav-item nav-link active" href="/aboutus">About Us</a>
             <a class="nav-item nav-link active" href="/user/logout">Logout</a>
         </div>
     </nav>
@@ -12,13 +12,14 @@
     {{#if message}}
         <div>{{message}}</div> 
     {{/if}}
+    <div class="row h-100">
     {{#if NFT}}
         {{#each NFT}}
     
     <div id={{this.id}} class="card" style="width: 18rem;">
         <a href={{this.url}}><img class="card-img-top" src= {{this.image}} alt="NFT image"></a>
         <div class="card-body">
-            <h4 class="card-title"><b>Auction Ends: {{this.expire}}</b></h4>
+            <h2 class="card-title"><b>Auction Ends: {{this.expire}}</b></h2>
             <p>{{this.desc}}</p>
             {{#if this.myBidTop}}
             <p>My Bid is the Current Top Bid</p>
@@ -31,6 +32,7 @@
         </div>
     </div>
     {{/each}}
+    </div>
     {{else}}
     <div>No current bids</div>
     {{/if}}
