--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -18,7 +18,13 @@
             <h2 class="card-title"><b>Auction Ends: {{this.expire}}</b></h2>
             <p>{{this.desc}}</p>
             <p>Highest Bid: {{this.highestbid}}</p>
-            <button class="close-listing">End Listing</button>
+            <form action="">
+                <label for="datetime">Change expiration date</label><br>
+                <input type="date" name="datetime" id="datetime" pattern="\d{4}-\d{2}-\d{2}">
+                <button type="submit">Submit</button><br>
+                <button class="close-listing2">Accept Bid</button><br>
+                <button class="close-listing">End Listing</button>
+            </form>
         </div>
     </div>
     {{/each}}
