fixed annoyying issue with cards

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,7 +13,9 @@
         </form>
     </nav>
 
-    <h1>NFT Marketplace</h1>
+    
+    <div class="container">
+        <h1>NFT Marketplace</h1>
     <div class="row h-100" >
         {{#if NFT}}
         {{#each NFT}}
@@ -30,5 +32,6 @@
         {{else}}
         <div>No current listings</div>
         {{/if}}
+    </div>
     </div>
 </main>
