--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -18,8 +18,9 @@
         </p>
     </div>
 
-    <h2>Meet the team</h2>
     
+    <div class = "container">
+        <h2>Meet the team</h2>
     <div class="row h-100">
         <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="../public/images/nick_g.jpg" alt="Nick Guo">
@@ -60,6 +61,6 @@
                 <p>ykazinet@stevens.edu</p>
             </div>
         </div>
-
+    </div>
     </div>
 </main>
